2015-09-26  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-resolve-references-for-xs-attribute):
	Convert XML schema attributes to xsd:string.

2015-09-25  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-inspect.el (soap-sample-value-for-xs-attribute): New
	function.
	(soap-sample-value-for-xs-simple-type): Prepend attributes to
	result.
	(soap-sample-value-for-xs-complex-type): Likewise.
	(soap-inspect-xs-attribute): New function.
	(soap-inspect-xs-simple-type): Print attributes.
	(soap-inspect-xs-complex-type): Likewise.

2015-09-25  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-inspect.el (soap-resolve-references-for-xs-simple-type):
	Resolve references for attributes.
	(soap-resolve-references-for-xs-complex-type): Likewise.

2015-04-07  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-xml-node-find-matching-child): Rename from
	soap-xml-node-first-child.
	(soap-xs-parse-attribute): Call soap-xml-node-find-matching-child.
	(soap-xs-parse-simple-type): Likewise.

2014-12-06  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-invoke-async): Add error checking.

2014-12-06  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-invoke-internal): New function.
	(soap-invoke-async): Call soap-invoke-internal.
	(soap-invoke): Likewise.

2014-12-06  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-invoke-async): Ensure buffer passed to
	url-retrieve callback is killed.

2014-12-03  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-parse-wsdl-phase-validate-node): Rename
	function.
	(soap-parse-wsdl-phase-fetch-imports): Likewise.
	(soap-parse-wsdl-phase-parse-schema): Likewise.
	(soap-parse-wsdl-phase-fetch-schema): Likewise.
	(soap-parse-wsdl-phase-finish-parsing): Likewise.
	(soap-parse-wsdl): Update calls.

2014-12-03  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-invoke-async): Fix callback invocation.
