@@ -1,5 +1,10 @@
 2015-09-26  Thomas Fitzsimmons  <fitzsim@fitzsim.org>
 
+	* soap-client.el (soap-xs-parse-attribute): Leave reference nil if
+	reference attribute is nil.
+
+2015-09-26  Thomas Fitzsimmons  <fitzsim@fitzsim.org>
+
 	* soap-client.el (soap-resolve-references-for-xs-attribute):
 	Convert XML schema attributes to xsd:string.
 
